работа: flask-wtf, регистрация

--- a/opensocial/client/client_templates/template/unlogged_template.html
+++ b/opensocial/client/client_templates/template/unlogged_template.html
@@ -23,7 +23,7 @@
                             <a href="/login"><span class="material-symbols-outlined">login</span> <span class="text">Войти</span></a>
                         </li>
                         <li class="navbar_icon">
-                            <a href="/reg"><span class="material-symbols-outlined">person_add</span> <span class="text">Регистрация</span></a>
+                            <a href="/register"><span class="material-symbols-outlined">person_add</span> <span class="text">Регистрация</span></a>
                         </li>
                     </il>
                 </div>
