--- a/opensocial/client/client_templates/template/logged_template.html
+++ b/opensocial/client/client_templates/template/logged_template.html
@@ -7,6 +7,8 @@
     <title>OpenSocial</title>
 
     <link rel="stylesheet" href="{{ url_for('MainClientAPI.static', filename='index.css') }}">
+
+    <script src="https://unpkg.com/vue@3"></script>
 </head>
 <body>
     <div class="social_application">
